--- a/demo/demo.html
+++ b/demo/demo.html
@@ -47,36 +47,36 @@
 		var list = [{
 			height: 950,
 			width: 800,
-			img: "imgs/1.jpg"
+			img: "../imgs/1.jpg"
 		},
 		{
 			height: 1187,
 			width: 900,
-			img: "imgs/2.jpg"
+			img: "../imgs/2.jpg"
 		},
 		{
 			height: 766,
 			width: 980,
-			img: "imgs/3.jpg"
+			img: "../imgs/3.jpg"
 		},
 		{
 			height: 754,
 			width: 980,
-			img: "imgs/4.jpg"
+			img: "../imgs/4.jpg"
 		},
 		{
 			height: 493,
-			img: "imgs/5.jpg",
+			img: "../imgs/5.jpg",
 			width: 750
 		},
 		{
 			height: 500,
-			img: "imgs/6.jpg",
+			img: "../imgs/6.jpg",
 			width: 750
 		},
 		{	
 			height: 600,
-			img: "imgs/7.jpg",
+			img: "../imgs/7.jpg",
 			width: 400
 		}];
 
