--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,10 @@
 <body>
 	<!-- 外层画布 -->
 	<div id="canvas"></div>
-	<script src="bundle.js"></script>
+	<script type="text/javascript">
+		
+	</script>
+
+	<script src="dist/bundle.js"></script>
 </body>
 </html>
