--- a/demo/index.html
+++ b/demo/index.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
+	<div id="info">Pic index: <strong>0</strong></div>
 	<!-- 外层画布 -->
 	<div id="outer"><div id="canvas"></div></div>
-
-	<div id="menu" class="menu">
-		<span>isLooping : false</span>
-		<span>isVerticle : false</span>
-		<span>isAutoplay : false</span>
-		<span>changeOrientation</span>
+	<div id="menu">
+		<span>isLooping: false</span>
+		<span>isVerticle: false</span>
+		<span>isAutoplay: false</span>
+		<span>changeOrientation: 90</span>
 	</div>
 
 	<script type="text/javascript" src="js/mslider.js"></script>
@@ -57,7 +57,11 @@
 	var mslider = new MSlider({
 	    data: list,
 	    dom: document.getElementById("canvas"),
-	    duration: 500
+	    duration: 500,
+	   	onslidechange: function(){
+	   		var idx = document.getElementById('info').getElementsByTagName('strong')[0];
+	   		idx.innerText = mslider.picIdx;
+	   	}
 	});
 
 	(function(){
@@ -68,10 +72,10 @@
 			var target = spans[0];
 			if (target.className == 'on') {
 				target.className = '';
-				target.innerText = 'isLooping : false';
+				target.innerText = 'isLooping: false';
 			} else {
 				target.className = 'on';	
-				target.innerText = 'isLooping : true';
+				target.innerText = 'isLooping: true';
 			}
 
 			mslider._opts.isLooping = !mslider._opts.isLooping 
@@ -82,10 +86,10 @@
 			var target = spans[1];
 			if (target.className == 'on') {
 				target.className = '';
-				target.innerText = 'isVerticle : false';
+				target.innerText = 'isVerticle: false';
 			} else {
 				target.className = 'on';	
-				target.innerText = 'isVerticle : true';
+				target.innerText = 'isVerticle: true';
 			}
 
 			mslider._opts.isVerticle = !mslider._opts.isVerticle;
@@ -96,14 +100,43 @@
 			var target = spans[2];
 			if (target.className == 'on') {
 				target.className = '';
-				target.innerText = 'isAutoplay : false';
+				target.innerText = 'isAutoplay: false';
 			} else {
 				target.className = 'on';	
-				target.innerText = 'isAutoplay : true';
+				target.innerText = 'isAutoplay: true';
 			}
 
 			mslider._opts.isAutoplay = !mslider._opts.isAutoplay;
 			mslider.reset();
+		}
+
+		spans[3].onclick = function(){
+			var target = spans[3];
+			var outer = document.getElementById('outer');
+			var menu = document.getElementById('menu');
+			var canvas = document.getElementById('canvas');
+
+			if (target.className == 'on') {
+				target.className = '';
+				outer.className = '';
+				menu.className = '';
+				target.innerText = 'changeOrientation: 0';
+				canvas.className = '';
+				outer.appendChild(canvas);
+				setTimeout(function(){
+					mslider.reset();
+				}, 200);
+			} else {
+				target.className = 'on';
+				outer.className = 'rotated_outer';
+				menu.className = 'rotated_menu';
+				target.innerText = 'changeOrientation: 90';
+				setTimeout(function(){
+					document.body.appendChild(canvas);
+					canvas.className = 'rotated_canvas';
+					mslider.reset();
+				}, 200);
+			}
 		}
 
 	})()
