update some information

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<div>Please use webkit browser to watch this example, and if you want to try touch Event please make sure you already turn on the emulate touch screen.Feel free to submit issue or bug to this project, source address is https://github.com/BE-FE/MSlider</div>
 	<div id="info">Pic index: <strong>0</strong></div>
 	<!-- 外层画布 -->
 	<div id="outer"><div id="canvas"></div></div>
