--- a/demo/index.html
+++ b/demo/index.html
@@ -8,16 +8,22 @@
 </head>
 
 <body>
-	<div>Please use webkit browser to watch this example, and if you want to try touch Event please make sure you already turn on the emulate touch screen.Feel free to submit issue or bug to this project, source address is https://github.com/BE-FE/MSlider</div>
-	<div id="info">Pic index: <strong>0</strong></div>
-	<!-- 外层画布 -->
-	<div id="outer"><div id="canvas"></div></div>
-	<div id="menu">
-		<span>isLooping: false</span>
-		<span>isVerticle: false</span>
-		<span>isAutoplay: false</span>
-		<span>changeOrientation: 90</span>
+	<div id="tip">
+		<p>Please use webkit browser to watch this example.</p>
+		<p>If you want to try touch Event please make sure you already turn on developer tool "Emulate touch screen".</p>
+		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/MSlider">https://github.com/BE-FE/MSlider</a></div>
+	<div id="content">
+		<div id="info">Pic index: <strong>0</strong></div>
+		<!-- 外层画布 -->
+		<div id="outer"><div id="canvas"></div></div>
+		<div id="menu">
+			<span>isLooping: false</span>
+			<span>isVerticle: false</span>
+			<span>isAutoplay: false</span>
+			<span>changeOrientation: 90</span>
+		</div>
 	</div>
+	
 
 	<script type="text/javascript" src="js/mslider.js"></script>
 	<script type="text/javascript">
@@ -116,6 +122,7 @@
 			var outer = document.getElementById('outer');
 			var menu = document.getElementById('menu');
 			var canvas = document.getElementById('canvas');
+			var content = document.getElementById('content');
 
 			if (target.className == 'on') {
 				target.className = '';
@@ -133,7 +140,7 @@
 				menu.className = 'rotated_menu';
 				target.innerText = 'changeOrientation: 90';
 				setTimeout(function(){
-					document.body.appendChild(canvas);
+					content.appendChild(canvas);
 					canvas.className = 'rotated_canvas';
 					mslider.reset();
 				}, 200);
