修改变量名，合并demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
-<link type="text/css" rel="stylesheet" media="all" href="../dist/common.css">
-</head>
+<link type="text/css" rel="stylesheet" media="all"
+    href="css/common.css">
 
+</head>
 <body>
 	<div id="tip" >
 		<p>Please use webkit browser to watch this example.</p>
@@ -24,7 +25,7 @@
 	</div>
 	
 
-	<script type="text/javascript" src="js/mslider.js"></script>
+	<script type="text/javascript" src="../js/mslider.js"></script>
 	<script type="text/javascript">
 	var list = [{
 		height: 475,
