--- a/demo/index.html
+++ b/demo/index.html
@@ -65,9 +65,9 @@
 	    data: list,
 	    dom: document.getElementById("canvas"),
 	    duration: 1500,
-	   	onslidechange: function(){
+	   	onslidechange: function(idx){
 	   		var idx = document.getElementById('info').getElementsByTagName('strong')[0];
-	   		idx.innerText = mslider.picIdx;
+	   		idx.innerText = idx;
 	   	}
 	});
 
