fix bug in callback function in index.html
fix bug in callback function in index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -76,7 +76,7 @@
 	    duration: 1500,
 	   	onslidechange: function(idx){
 	   		var idx = document.getElementById('info').getElementsByTagName('strong')[0];
-	   		idx.innerText = idx;
+	   		idx.innerText = this.sliderIndex;
 	   	}
 	});
 
