--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,8 @@
 	<link type="text/css" rel="stylesheet" media="all" href="css/common.css">
 </head>
 <body>
-	<!-- 外层画布 -->
-	<div id="canvas"></div>
+	<!-- Outer Canvas 外层画布 -->
+	<div id="MSlider-canvas"></div>
 	<script src="../src/mslider.js"></script>
 	<script src="app.js"></script>
 </body>
