Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h1>
 
 <ul>
-<li><a href="http://BE-FE.github.io/MSlider/demo/">Comprehensive</a></li>
-<li><a href="http://BE-FE.github.io/MSlider/demo/Basic">Basic</a></li>
+<li><a href="http://lcxfs1991.github.io/MSlider/demo/comprehensive/">Comprehensive</a></li>
+<li><a href="http://lcxfs1991.github.io/MSlider/demo/basic/">Basic</a></li>
+<li><a href="http://lcxfs1991.github.io/MSlider/demo/dom/">Dom</a></li>
 </ul>
 
 <h1>
@@ -171,7 +172,7 @@
     <tr>
         <td>duration</td>
         <td>Integer (1000 == 1s)</td>
-        <td>Duration when an image slides</td>
+        <td>Time gap when an image slides</td>
     </tr>
     <tr>
         <td>ulClass</td>
