--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Mslider by lcxfs1991</title>
+    <title>Mslider by BE-FE</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -20,12 +20,12 @@
         <p class="header">A efficency &amp; simple slider for webapp</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/lcxfs1991/MSlider/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/lcxfs1991/MSlider/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/lcxfs1991/MSlider">View On GitHub</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/BE-FE/MSlider/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/BE-FE/MSlider/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/BE-FE/MSlider">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/lcxfs1991">lcxfs1991</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/BE-FE">BE-FE</a></p>
 
 
       </header>
@@ -33,8 +33,8 @@
         <h1>
 <a name="mslider" class="anchor" href="#mslider"><span class="octicon octicon-link"></span></a>MSlider</h1>
 
-<h3>
-<a name="feature" class="anchor" href="#feature"><span class="octicon octicon-link"></span></a>Feature</h3>
+<h1>
+<a name="feature" class="anchor" href="#feature"><span class="octicon octicon-link"></span></a>Feature</h1>
 
 <ul>
 <li>Mobile First</li>
@@ -128,9 +128,9 @@
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h1>
 
 <ul>
-<li><a href="http://lcxfs1991.github.io/MSlider/demo/comprehensive/">Comprehensive</a></li>
-<li><a href="http://lcxfs1991.github.io/MSlider/demo/basic/">Basic</a></li>
-<li><a href="http://lcxfs1991.github.io/MSlider/demo/dom/">Dom</a></li>
+<li><a href="http://be-fe.github.io/MSlider/demo/comprehensive/">Comprehensive</a></li>
+<li><a href="http://be-fe.github.io/MSlider/demo/basic/">Basic</a></li>
+<li><a href="http://be-fe.github.io/MSlider/demo/dom/">Dom</a></li>
 </ul>
 
 <h1>
