fix some code problem and css style selector
fix some code problem and css style selector

--- a/demo/comprehensive/index.html
+++ b/demo/comprehensive/index.html
@@ -8,15 +8,15 @@
 
 </head>
 <body>
-	<div id="tip" >
+	<div id="MSlider-tip" >
 		<p>Please use webkit browser to watch this example.</p>
 		<p>If you want to try touch Event please make sure you already turn on developer tool "Emulate touch screen".</p>
 		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/MSlider">https://github.com/BE-FE/MSlider</a></div>
-	<div id="content">
-		<div id="info">Pic index: <strong>0</strong></div>
+	<div id="MSlider-content">
+		<div id="MSlider-info">Pic index: <strong>0</strong></div>
 		<!-- 外层画布 -->
-		<div id="outer"><div id="canvas"></div></div>
-		<div id="menu">
+		<div id="MSlider-outer"><div id="MSlider-canvas"></div></div>
+		<div id="MSlider-menu">
 			<span>isLooping: false</span>
 			<span>isVertical: false</span>
 			<span>isAutoplay: false</span>
