--- a/demo/dom/index.html
+++ b/demo/dom/index.html
@@ -8,26 +8,23 @@
 
 </head>
 <body>
-	<div id="tip" >
+	<div id="MSlider-tip" >
 		<p>Please use webkit browser to watch this example.</p>
 		<p>If you want to try touch Event please make sure you already turn on developer tool "Emulate touch screen".</p>
 		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/MSlider">https://github.com/BE-FE/MSlider</a>
 	</div>
-	<div id="content">
-		<div id="outer">
-			<div id="canvas">
-				<div id="nav">
+	<div id="MSlider-content">
+		<div id="MSlider-outer">
+			<div id="MSlider-canvas">
+				<div id="MSlider-nav">
 					<a>Home</a>
-					<a class="on">Page1</a>
-					<a>Page2</a>
-					<a>Page3</a>
 				</div>
-				<div id="show"> 
+				<div id="MSlider-show"> 
 					
 				</div>
 			</div>
 		</div>
-		<div id="menu">
+		<div id="MSlider-menu">
 			<span>isLooping: false</span>
 			<span>isVertical: false</span>
 			<span>isAutoplay: false</span>
