--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- Outer Canvas 外层画布 -->
 	<div id="MSlider-canvas"></div>
-	<script src="../src/mslider.js"></script>
+	<script src="js/mslider.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
