--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- Outer Canvas 外层画布 -->
-	<div id="MSlider-canvas"></div>
+	<div id="iSlider-wrapper"></div>
 	<script src="js/mslider.js"></script>
 	<script src="app.js"></script>
 </body>
