add dom example to master
add dom example to master

--- a/demo/image/index.html
+++ b/demo/image/index.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- Outer Canvas 外层画布 -->
 	<div id="iSlider-wrapper"></div>
-	<script src="js/islider.js"></script>
+	<script src="../js/islider.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
