--- a/demo/dom/index.html
+++ b/demo/dom/index.html
@@ -8,30 +8,30 @@
 
 </head>
 <body>
-	<div id="MSlider-tip" >
+	<div id="iSlider-tip" >
 		<p>Please use webkit browser to watch this example.</p>
 		<p>If you want to try touch Event please make sure you already turn on developer tool "Emulate touch screen".</p>
-		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/MSlider">https://github.com/BE-FE/MSlider</a>
+		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/iSlider">https://github.com/BE-FE/iSlider</a>
 	</div>
-	<div id="MSlider-content">
-		<div id="MSlider-outer">
-			<div id="MSlider-canvas">
-				<div id="MSlider-nav">
+	<div id="iSlider-content">
+		<div id="iSlider-outer">
+			<div id="iSlider-canvas">
+				<div id="iSlider-nav">
 					<a>Home</a>
 				</div>
-				<div id="MSlider-show"> 
+				<div id="iSlider-show"> 
 					
 				</div>
 			</div>
 		</div>
-		<div id="MSlider-menu">
+		<div id="iSlider-menu">
 			<span>isLooping: false</span>
 			<span>isVertical: false</span>
 			<span>isAutoplay: false</span>
 			<span>changeOrientation: 90</span>
 		</div>
 	</div>
-	<script type="text/javascript" src="../src/mslider.js"></script>
+	<script type="text/javascript" src="../src/islider.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
