--- a/demo/image/index.html
+++ b/demo/image/index.html
@@ -8,15 +8,15 @@
 
 </head>
 <body>
-	<div id="MSlider-tip" >
+	<div id="iSlider-tip" >
 		<p>Please use webkit browser to watch this example.</p>
 		<p>If you want to try touch Event please make sure you already turn on developer tool "Emulate touch screen".</p>
-		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/MSlider">https://github.com/BE-FE/MSlider</a></div>
-	<div id="MSlider-content">
-		<div id="MSlider-info">Pic index: <strong>0</strong></div>
+		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/iSlider">https://github.com/BE-FE/iSlider</a></div>
+	<div id="iSlider-content">
+		<div id="iSlider-info">Pic index: <strong>0</strong></div>
 		<!-- 外层画布 -->
-		<div id="MSlider-outer"><div id="MSlider-canvas"></div></div>
-		<div id="MSlider-menu">
+		<div id="iSlider-outer"><div id="iSlider-canvas"></div></div>
+		<div id="iSlider-menu">
 			<span>isLooping: false</span>
 			<span>isVertical: false</span>
 			<span>isAutoplay: false</span>
@@ -25,7 +25,7 @@
 	</div>
 	
 
-	<script type="text/javascript" src="../src/mslider.js"></script>
+	<script type="text/javascript" src="../src/iSlider.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 
 </body>
