Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <h1>
 <a name="islidersmooth-slider-for-webapps" class="anchor" href="#islidersmooth-slider-for-webapps"><span class="octicon octicon-link"></span></a>iSlider，Smooth slider for webapps</h1>
 
+<h3>
+<a name="islider-official-page" class="anchor" href="#islider-official-page"><span class="octicon octicon-link"></span></a><a href="http://lcxfs1991.github.io/iSlider">iSlider Official Page</a>
+</h3>
+
 <p>iSlider is a high performance，dependency free, mobile-platform javascript slider.
 It can handle any elements that need to be slide, like picture list or different dom elements. 
 It features:</p>
@@ -117,6 +121,12 @@ It features:</p>
     });
 &lt;/script&gt;
 </code></pre>
+
+<h2>
+<a name="demo-of-islider" class="anchor" href="#demo-of-islider"><span class="octicon octicon-link"></span></a>Demo of iSlider</h2>
+
+<p>*<a href="http://lcxfs1991.github.io/iSlider/demo/dom/">Dom</a>
+*<a href="http://lcxfs1991.github.io/iSlider/demo/picture/">Picture</a></p>
 
 <h2>
 <a name="understand-the-islider" class="anchor" href="#understand-the-islider"><span class="octicon octicon-link"></span></a>Understand The iSlider</h2>
