--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -25,7 +25,7 @@
 	</div>
 	
 
-	<script type="text/javascript" src="../src/iSlider.js"></script>
+	<script type="text/javascript" src="../src/islider.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 
 </body>
