Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@ It features:</p>
 <h2>
 <a name="demo-of-islider" class="anchor" href="#demo-of-islider"><span class="octicon octicon-link"></span></a>Demo of iSlider</h2>
 
-<p>*<a href="http://lcxfs1991.github.io/iSlider/demo/dom/">Dom</a>
-*<a href="http://lcxfs1991.github.io/iSlider/demo/picture/">Picture</a></p>
+<ul>
+<li><a href="http://lcxfs1991.github.io/iSlider/demo/dom/">Dom</a></li>
+<li><a href="http://lcxfs1991.github.io/iSlider/demo/picture/">Picture</a></li>
+</ul>
 
 <h2>
 <a name="understand-the-islider" class="anchor" href="#understand-the-islider"><span class="octicon octicon-link"></span></a>Understand The iSlider</h2>
