--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -13,14 +13,38 @@
 		<p>If you want to try touch Event please make sure you already turn on developer tool "Emulate touch screen".</p>
 		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/iSlider">https://github.com/BE-FE/iSlider</a></div>
 	<div id="iSlider-content">
-		<div id="iSlider-info">Pic index: <strong>0</strong></div>
 		<!-- 外层画布 -->
-		<div id="iSlider-outer"><div id="iSlider-canvas"></div></div>
+		<div id="iSlider-outer">
+			<div id="iSlider-canvas">
+				<div id="iSlider-nav">
+					<a>Index: 0</a>
+				</div>
+				<div id="iSlider-show"> 
+					
+				</div>
+			</div>
+		</div>
+
 		<div id="iSlider-menu">
 			<span>isLooping: false</span>
 			<span>isVertical: false</span>
 			<span>isAutoplay: false</span>
 			<span>changeOrientation: 90</span>
+			<span>
+				animationType:
+				<select>
+					<option value="default">Default</option>
+					<option value="rotate">Rotate</option>
+					<option value="3d">3d</option>
+				</select>
+			</span>
+			<span>
+				Type: 
+				<select>
+					<option value="pic">Picture</option>
+					<option value="dom">Dom</option>
+				</select>
+			</span>
 		</div>
 	</div>
 	
