--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@ It features:</p>
         <td>Time gap when an image slides</td>
     </tr>
     <tr>
+        <td>animationType</td>
+        <td>String</td>
+        <td>Currently, default, rotate, 3d and flip are supported animations</td>
+    </tr>
+    <tr>
         <td>onslide</td>
         <td>Function</td>
         <td>Callback function when your finger is moving</td>
