--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -36,6 +36,7 @@
 					<option value="default">Default</option>
 					<option value="rotate">Rotate</option>
 					<option value="3d">3d</option>
+					<option value="flip">Flip</option>
 				</select>
 			</span>
 			<span>
