--- a/demo/index.html
+++ b/demo/index.html
@@ -50,7 +50,7 @@
 	</div>
 	
 
-	<script type="text/javascript" src="../src/islider.js"></script>
+	<script type="text/javascript" src="src/islider.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 
 </body>
