Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@ It features:</p>
 <a name="demo-of-islider" class="anchor" href="#demo-of-islider"><span class="octicon octicon-link"></span></a>Demo of iSlider</h2>
 
 <ul>
-<li><a href="http://lcxfs1991.github.io/iSlider/demo/dom/">Dom</a></li>
-<li><a href="http://lcxfs1991.github.io/iSlider/demo/picture/">Picture</a></li>
+<li><a href="http://lcxfs1991.github.io/iSlider/demo/">Demo</a></li>
 </ul>
 
 <h2>
