--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -88,7 +88,7 @@
 			islider = new iSlider({
 			    data: list,
 			    dom: document.getElementById("iSlider-wrapper"),
-			    isVertical: true,
+			    isVertical: false,
 			    isLooping: true,
 			    isDebug: true,
 			    isAutoplay: false,
