make example responsive

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,18 +13,8 @@
 		<p>If you want to try touch Event please make sure you already turn on developer tool "Emulate touch screen".</p>
 		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/iSlider">https://github.com/BE-FE/iSlider</a></div>
 	<div id="iSlider-content">
-		<!-- 外层画布 -->
-		<div id="iSlider-outer">
-			<div id="iSlider-canvas">
-				<div id="iSlider-nav">
-					<a>Index: 0</a>
-				</div>
-				<div id="iSlider-show"> 
-					
-				</div>
-			</div>
-		</div>
 
+		<!-- Menu -->
 		<div id="iSlider-menu">
 			<span>isLooping: false</span>
 			<span>isVertical: false</span>
@@ -47,6 +37,19 @@
 				</select>
 			</span>
 		</div>
+
+		<!-- Wrapper -->
+		<div id="iSlider-outer">
+			<div id="iSlider-canvas">
+				<div id="iSlider-nav">
+					<a>Index: 0</a>
+				</div>
+				<div id="iSlider-show"> 
+					
+				</div>
+			</div>
+		</div>
+
 	</div>
 	
 
