make example responsive

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,18 @@
 		<p>Feel free to submit issue or bug to this project, address is <a href="https://github.com/BE-FE/iSlider">https://github.com/BE-FE/iSlider</a></div>
 	<div id="iSlider-content">
 
+		<!-- Wrapper -->
+		<div id="iSlider-outer">
+			<div id="iSlider-canvas">
+				<div id="iSlider-nav">
+					<a>Index: 0</a>
+				</div>
+				<div id="iSlider-show"> 
+					
+				</div>
+			</div>
+		</div>
+
 		<!-- Menu -->
 		<div id="iSlider-menu">
 			<span>isLooping: false</span>
@@ -36,18 +48,7 @@
 					<option value="dom">Dom</option>
 				</select>
 			</span>
-		</div>
-
-		<!-- Wrapper -->
-		<div id="iSlider-outer">
-			<div id="iSlider-canvas">
-				<div id="iSlider-nav">
-					<a>Index: 0</a>
-				</div>
-				<div id="iSlider-show"> 
-					
-				</div>
-			</div>
+			<div style="clear:both"></div>
 		</div>
 
 	</div>
