add depth animate

--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -92,7 +92,7 @@
 			    isLooping: true,
 			    isDebug: true,
 			    isAutoplay: false,
-			    animateType: '3d'
+			    animateType: 'depth'
 			});
 
 	</script>
