--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -91,8 +91,8 @@
 			    isVertical: true,
 			    isLooping: true,
 			    isDebug: true,
-			    isAutoplay: false,
-			    animateType: 'flip'
+			    isAutoplay: true,
+			    animateType: '3d'
 			});
 
 	</script>
