improve reponsiveness demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<!-- Menu -->
-		<div id="iSlider-menu">
+		<div id="iSlider-menu" class="iSlider-menu-animation">
 			<span>isLooping: false</span>
 			<span>isVertical: false</span>
 			<span>isAutoplay: false</span>
@@ -50,6 +50,7 @@
 			</span>
 			<div style="clear:both"></div>
 		</div>
+		<div id="iSlider-menu-tag" class="iSlider-menu-tag-animation">Menu</div>
 
 	</div>
 	
