--- a/demo/index.html
+++ b/demo/index.html
@@ -15,12 +15,12 @@
 	<div id="iSlider-content">
 
 		<!-- Wrapper -->
-		<div id="iSlider-outer">
-			<div id="iSlider-canvas">
+		<div id="iSlider-outer" class="iSlider-outer-pc">
+			<div id="iSlider-canvas" class="iSlider-canvas-pc">
 				<div id="iSlider-nav">
 					<a>Index: 0</a>
 				</div>
-				<div id="iSlider-show"> 
+				<div id="iSlider-show" class="iSlider-show-pc"> 
 					
 				</div>
 			</div>
