Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Islider by BE-FE</title>
+    <title>iSlider by BE-FE</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Islider</h1>
+        <h1 class="header">iSlider</h1>
         <p class="header">Smooth mobile slider for webapps</p>
 
         <ul>
@@ -30,30 +30,40 @@
 
       </header>
       <section>
-        <h1>
-<a name="islidersmooth-slider-for-webapps" class="anchor" href="#islidersmooth-slider-for-webapps"><span class="octicon octicon-link"></span></a>iSlider，Smooth slider for webapps</h1>
+        <h1 id="intro">
+<a id="islider" class="anchor" href="#islider" aria-hidden="true"><span class="octicon octicon-link"></span></a>iSlider</h1>
 
-<h3>
-<a name="islider-official-page" class="anchor" href="#islider-official-page"><span class="octicon octicon-link"></span></a><a href="http://lcxfs1991.github.io/iSlider">iSlider Official Page</a>
-</h3>
+<h4>
+<a id="islider-english" class="anchor" href="#islider-english" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://github.com/BE-FE/iSlider/blob/master/README_English.md">iSlider English</a>
+</h4>
 
-<p>iSlider is a high performance，dependency free, mobile-platform javascript slider.
-It can handle any elements that need to be slide, like picture list or different dom elements. 
-It features:</p>
+<h4>
+<a id="islider-官网" class="anchor" href="#islider-%E5%AE%98%E7%BD%91" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://be-fe.github.io/iSlider/">iSlider 官网</a>
+</h4>
+
+<h4>
+<a id="islider-example" class="anchor" href="#islider-example" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://be-fe.github.io/iSlider/demo/">iSlider Example</a>
+</h4>
+
+<p>iSlider是一个表现出众，无任何插件依赖的手机平台javascript滑动组件。它能够处理任何元素，例如图片或者DOM元素。它有如下特性：</p>
 
 <ul>
-<li>Animation can be customized with user defined functions (rotate, 3d, default).</li>
-<li>You can easily hook to a plethora of custom events (onslidestart, onslide, onslideend, onslidechange)</li>
-<li>Damping effect, Infinite Looping, Autometic sliding and Vertical/Horizontal Sliding can be configured.</li>
+<li>能够自定义动画，自带的动画包括 旋转(rotate), 三维(3d), 轻弹(flip), 默认(default)</li>
+<li>你能够简易地添加回调函数(onslidestart, onslide, onslideend, onslidechange)</li>
+<li>我们还支持滑动衰减效果，循环效果，自动滑动效果，水平/垂直滑动</li>
 </ul>
 
-<h2>
-<a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h2>
+<h2 id="demo">
+<a id="islider展示" class="anchor" href="#islider%E5%B1%95%E7%A4%BA" aria-hidden="true"><span class="octicon octicon-link"></span></a>iSlider展示</h2>
 
-<p>The best way to learn the iScroll is by looking at the demos. In the archive you'll find a demo folderMost of the script features are outlined there.
-<em>iSlider</em> is a class that needs to be initiated for each dom area. </p>
+<p><img width="150px" height="150px" src="https://raw.githubusercontent.com/BE-FE/iSlider/master/qrcode.png"></p>
 
-<p>Before you start, you need to prepare some data for iSlider:</p>
+<h2 id="getting-started">
+<a id="开始部署islider" class="anchor" href="#%E5%BC%80%E5%A7%8B%E9%83%A8%E7%BD%B2islider" aria-hidden="true"><span class="octicon octicon-link"></span></a>开始部署iSlider</h2>
+
+<p>部署iScroll最容易的办法是查阅我们提供的简易例子。大部份代码存放在demo文件夹的文件里面。<em>iSlider</em> 是必要新建的一个类。</p>
+
+<p>在你开始之前，你需要为iSlider先新建好数据:</p>
 
 <div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">data</span> <span class="o">=</span> <span class="p">[{</span>
     <span class="nx">height</span><span class="o">:</span> <span class="mi">475</span><span class="p">,</span>
@@ -70,12 +80,12 @@ It features:</p>
 <span class="p">}];</span>
 </pre></div>
 
-<p>HTML structure you only need to prepare is :</p>
+<p>HTML代码如下:</p>
 
 <pre><code>&lt;div id="iSlider-wrapper"&gt;&lt;/div&gt;
 </code></pre>
 
-<p>To make it runnable, all you need to do is to initiate:</p>
+<p>要使其运行，按下面例子新建ISlider类: </p>
 
 <pre><code>&lt;script type="text/javascript"&gt;
     var mySlider = new ISlider({
@@ -87,10 +97,10 @@ It features:</p>
 
 <p>That's it. </p>
 
-<h2>
-<a name="configure-the-islider" class="anchor" href="#configure-the-islider"><span class="octicon octicon-link"></span></a>Configure the iSlider</h2>
+<h2 id="configuration">
+<a id="配置islider" class="anchor" href="#%E9%85%8D%E7%BD%AEislider" aria-hidden="true"><span class="octicon octicon-link"></span></a>配置iSlider</h2>
 
-<p>Besides the basic ways you can do with iSlider, you can customized the features we provide. For example, if you prefers to put dom elements on the list, you can change the data array like this:</p>
+<p>除了上文提到的基本部署模式，你还可以自定义我们提供的特性。例如，如果你想滑动DOM元素而非图片，你可以按以下的格式新建DOM数据: </p>
 
 <div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">data</span> <span class="o">=</span> <span class="p">[{</span>
     <span class="s1">'height'</span> <span class="o">:</span> <span class="s1">'100%'</span><span class="p">,</span>
@@ -107,7 +117,7 @@ It features:</p>
 <span class="p">}];</span>
 </pre></div>
 
-<p>If you hope to implement the effects mentioned in introduction part, you can:</p>
+<p>如果你想实现介绍部份提到的效果，你可以按以下格式设置: </p>
 
 <pre><code>&lt;script type="text/javascript"&gt;
     var mySlider = new ISlider({
@@ -122,36 +132,29 @@ It features:</p>
 &lt;/script&gt;
 </code></pre>
 
-<h2>
-<a name="demo-of-islider" class="anchor" href="#demo-of-islider"><span class="octicon octicon-link"></span></a>Demo of iSlider</h2>
+<h2 id="understanding">
+<a id="深入了解islider" class="anchor" href="#%E6%B7%B1%E5%85%A5%E4%BA%86%E8%A7%A3islider" aria-hidden="true"><span class="octicon octicon-link"></span></a>深入了解iSlider</h2>
 
-<ul>
-<li><a href="http://BE-FE.github.io/iSlider/demo/">Demo</a></li>
-</ul>
-
-<h2>
-<a name="understand-the-islider" class="anchor" href="#understand-the-islider"><span class="octicon octicon-link"></span></a>Understand The iSlider</h2>
-
-<p>Here provides a clear description of what options you are able to manipulate:</p>
+<p>这里提供对iSlider类选项最清楚的描述: </p>
 
 <table>
 <thead>
     <tr>
-        <td>Option</td>
-        <td>Value</td>
-        <td>Description</td>
+        <td>选项</td>
+        <td>数值</td>
+        <td>解释</td>
     </tr>
 </thead>
 <tbody>
     <tr>
         <td>dom</td>
         <td>HTML Object</td>
-        <td>The DOM element that wraps image list</td>
+        <td>包含图片或者DOM元素的包裹DOM元素</td>
     </tr>
     <tr>
         <td>data</td>
         <td>Array of Content(picture | html)</td>
-        <td>Picture data, for example:
+        <td>若是图片数据，格式如下:
         <pre>
 [{
     height: 377,
@@ -164,63 +167,63 @@ It features:</p>
     <tr>
         <td>type</td>
         <td>String (pic | dom)</td>
-        <td>Default value is 'pic', 'dom' is also supported</td>
+        <td>默认值是'pic', 也支持'dom'</td>
     </tr>
     <tr>
         <td>duration</td>
         <td>Integer (1000 == 1s)</td>
-        <td>Time gap when an image slides</td>
+        <td>每个图片滑动的间隔时间，仅限于自动滑动模式</td>
     </tr>
     <tr>
-        <td>animationType</td>
+        <td>animateType</td>
         <td>String</td>
-        <td>Currently, default, rotate, 3d and flip are supported animations</td>
+        <td>目前支持默认(default), 旋转(rotate）, 三维(3d) and 轻弹(flip)</td>
     </tr>
     <tr>
         <td>onslide</td>
         <td>Function</td>
-        <td>Callback function when your finger is moving</td>
+        <td>手指滑动时的回调函数</td>
     </tr>
     <tr>
         <td>onslidestart</td>
         <td>Function</td>
-        <td>Callback function when your finger touch the screen</td>
+        <td>手指触屏时的回调函数</td>
     </tr>
     <tr>
         <td>onslideend</td>
         <td>Function</td>
-        <td>Callback function when your finger move out of the screen</td>
+        <td>手指离开屏幕时的回调函数</td>
     </tr>
     <tr>
         <td>onslidechange</td>
         <td>Function</td>
-        <td>Callback function when the autoplay mode is on and one image slides</td>
+        <td>自动滑动模式下当图片滑动时的回调函数</td>
     </tr>
     <tr>
         <td>isDebug</td>
         <td>Boolean (true | false)</td>
-        <td>Turn on/off the debug mode. Some debug message will output</td>
+        <td>开启/关闭调度模式</td>
     </tr>
     <tr>
         <td>isLooping</td>
         <td>Boolean (true | false)</td>
-        <td>Turn on/off infinite looping mode</td>
+        <td>开启/关闭循环模式</td>
     </tr>
     <tr>
         <td>isAutoplay</td>
         <td>Boolean (true | false)</td>
-        <td>Turn of/off autoplay mode</td>
+        <td>开启/关闭自动滑动模式</td>
     </tr>
         <tr>
         <td>isVertical</td>
         <td>Boolean (true | fasle)</td>
-        <td>Slide verically or horizontally</td>
+        <td>开启水平/垂直滑动模式</td>
     </tr>
 </tbody>
 </table>
 
-<h2>
-<a name="license-mit" class="anchor" href="#license-mit"><span class="octicon octicon-link"></span></a>License (MIT)</h2>
+<h2 id="license">
+<a id="license-mit" class="anchor" href="#license-mit" aria-hidden="true"><span class="octicon octicon-link"></span></a>License (MIT)</h2>
 
 <p>Copyright (c) 2014 BE-FE</p>
 
