--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -88,10 +88,10 @@
 			islider = new iSlider({
 			    data: list,
 			    dom: document.getElementById("iSlider-wrapper"),
-			    isVertical: true,
+			    isVertical: false,
 			    isLooping: true,
 			    isDebug: true,
-			    isAutoplay: true,
+			    isAutoplay: false,
 			    animateType: '3d'
 			});
 
