--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -89,7 +89,7 @@
 			    data: list,
 			    dom: document.getElementById("iSlider-wrapper"),
 			    isVertical: false,
-			    isLooping: true,
+			    isLooping: false,
 			    isDebug: true,
 			    isAutoplay: false,
 			    animateType: '3d'
