--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,7 @@
 				<select>
 					<option value="default">Default</option>
 					<option value="rotate">Rotate</option>
-					<option value="3d">3d</option>
+					<option value="depth">Depth</option>
 					<option value="flip">Flip</option>
 				</select>
 			</span>
