--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -88,11 +88,11 @@
 			islider = new iSlider({
 			    data: list,
 			    dom: document.getElementById("iSlider-wrapper"),
-			    isVertical: false,
+			    isVertical: true,
 			    isLooping: false,
 			    isDebug: true,
 			    isAutoplay: false,
-			    animateType: '3d'
+			    animateType: 'rotate'
 			});
 
 	</script>
