--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -85,15 +85,15 @@
 			}
 			];
 				
-			islider = new iSlider({
-			    data: list,
-			    dom: document.getElementById("iSlider-wrapper"),
-			    isVertical: true,
-			    isLooping: false,
-			    isDebug: true,
-			    isAutoplay: false,
-			    animateType: 'rotate'
-			});
+		var	islider = new iSlider({
+		    data: list,
+		    dom: document.getElementById("iSlider-wrapper"),
+		    isVertical: true,
+		    isLooping: false,
+		    isDebug: true,
+		    isAutoplay: false,
+		    animateType: 'rotate'
+		});
 
 	</script>
 </body>
